--- a/public/assets/css/mdb.css
+++ b/public/assets/css/mdb.css
@@ -18038,7 +18038,7 @@ button.mdb-autocomplete-clear svg {
 }
 
 .sn-bg-1 {
-    background-image: url("https://mdbootstrap.com/img/Photos/Others/sidenav1.jpg")
+    background-image: url("https://termosin.store/images/termosin.jpg")
 }
 
 .sn-bg-2 {
